--- a/poster/index.html
+++ b/poster/index.html
@@ -5,8 +5,8 @@
   <title>GREASE</title>
   <meta name="description" content="Grease Shop">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/shop.css">
-  <link rel="icon" href="img/flower.ico" type="image/x-icon">
+  <link rel="stylesheet" href="../css/shop.css">
+  <link rel="icon" href="../img/flower.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108381604-3"></script>
@@ -33,24 +33,34 @@
 </style>
 </head>
 <body style="background-color: #000">
-  <div class="container-fluid h-100">
+  <div class="container-fluid h-100" id="shop-outer">
     <div class="row h-100 justify-content-center">
       <div class="col-12 align-self-center">
         <div class="row justify-content-center">
-              <div class="col-md-6">
-                <a href="/shirt"><img id="shirt-home" src="img/tv-home-shirt.png"/></a>
+          <div class="container" id="shop-inner" style="margin-top:-8%;">
+            <div class="row">
+              <div class="col-6">
+                <a href="/"><img id="shop-icon" src="../img/grease-icon.png"/></a>
               </div>
-              <div class="col-md-6">
-                <a href="/poster"><img id="poster-home" src="img/tv-home-poster.png"/></a>
+              <div class="col-6">
+                <!--<img id="shirt-img" src="../img/shirt-grease.png"/>-->
+                <!--<img id="shirt-img" src="../img/shirt-grease2.jpg"/>-->
+                <a href="../img/poster.jpg" class="preview"><img id="shirt-img" src="../img/poster.png"/></a>
               </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-
-                <div id='product-component-949f5b273d9' style="display: none;"></div>
+            </div>
+            <div class="row">
+              <div class="col-5" id="second-row">
+                <p class="shop-text" id="txt1" style="margin-bottom: 0.1em;"> JUST </p>
+                <p class="shop-text" id="txt2">$9.00</p>
+                <p class="shop-text" id="txt3" style="margin-top: -1.2em;">PLUS SHIPPING AND HANDLING</p>
+              </div>
+              <div class="col-7">
+                <img id="payments" src="../img/payment-options.png"/>
+              </div>
+            </div>
+            <div class="row" id="third-row" style="margin-bottom: 1em">
+              <div class="col-12">
+                <div id='product-component-293591772c4'></div>
                 <script type="text/javascript">
                   /*<![CDATA[*/
                   (function () {
@@ -77,10 +87,11 @@
                         apiKey: '270d86d30fc3da6e01619d075834f350',
                         appId: '6',
                       });
+
                       ShopifyBuy.UI.onReady(client).then(function (ui) {
                         ui.createComponent('product', {
-                          id: [564217249849],
-                          node: document.getElementById('product-component-949f5b273d9'),
+                          id: [1053339680825],
+                          node: document.getElementById('product-component-293591772c4'),
                           moneyFormat: '%24%7B%7Bamount%7D%7D',
                           options: {
                             "product":{"variantId":"all","width":"240px",
@@ -97,13 +108,13 @@
                                         "font-size": "1.2em", //"3.8em",
                                         ":hover": {"background-color": "transparent"},
                                         "margin-top": "-20px !important",
-                                        "float": "right",
-                                        "margin-right": "24px !important",
+                                        "float": "left",
+                                        //"margin-left": "27px !important",
                                         ":focus": {
                                           "background-color": "transparent",
                                           "outline": "0 !important"
                                         },
-                                        "padding": "8px 18px", //"6px 50px",              
+                                        "padding": "8px 50px", //"6px 50px",              
                                     },
                                     "options":{
                                        "display": "block !important",
@@ -196,6 +207,13 @@
 })();
 /*]]>*/
 </script>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
 
 
 
@@ -204,6 +222,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-<script src="js/main.js"></script>
+<script src="../js/main.js"></script>
 </body>
 </html>
