--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>ShopGrease</title>
-  <base href="https://mathvitello.github.io/">
+  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <base href="/"> -->
  <script>document.write('<base href="' + document.location + '" />');</script>
-<link rel="stylesheet" href="styles.78fec520253c554ad846.css"></head>
+<link rel="stylesheet" href="styles.f44b37c962fc74481ce6.css"></head>
 <body>
   <sg-root></sg-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.2f4a59095805af02bd79.js"></script><script type="text/javascript" src="scripts.806effac119676237f10.js"></script><script type="text/javascript" src="main.5b66e24539d377000819.js"></script></body>
+  
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.2f4a59095805af02bd79.js"></script><script type="text/javascript" src="scripts.806effac119676237f10.js"></script><script type="text/javascript" src="main.ea5cfb7af32dd26222a0.js"></script></body>
 </html>
