--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   })();
 </script>
 <link rel="stylesheet" href="styles.a1545058ea99feb82c64.css"></head>
-<body style="background-image: url('assets/img/bluegrid.png');">
+<body style="background-image: url('assets/img/bluegrid.png'); height:fit-content;">
   <rb-root id="main"> <!--style="display:none"-->
     <div style="width: 100%; height: 100vh; background-color: #000;"></div>
   </rb-root>
@@ -66,5 +66,5 @@
         $('.ml-subscribe-form-1058500 .row-form').hide();
     }
   </script>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.7a0e6866a34e280f48e7.js"></script><script type="text/javascript" src="main.0ef9352747dbae17e02d.js"></script></body>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.7a0e6866a34e280f48e7.js"></script><script type="text/javascript" src="main.9ff67c07a9c1f49d0f82.js"></script></body>
 </html>
