--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link href="https://allfont.net/allfont.css?fonts=ledlight" rel="stylesheet" type="text/css" />
+  <link href="https://allfont.net/allfont.css?fonts=ledlight" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles.cf229f8b801b5fe97311.css"></head>
 <body>
   <app-root></app-root>
-  <script src="http://sdks.shopifycdn.com/buy-button/1.0.0/buybutton.js"></script>
+  <script src="https://sdks.shopifycdn.com/buy-button/1.0.0/buybutton.js"></script>
 <script src="runtime-es2015.0dae8cbc97194c7caed4.js" type="module"></script><script src="runtime-es5.0dae8cbc97194c7caed4.js" nomodule defer></script><script src="polyfills-es5.2237b5d0d7a85091411d.js" nomodule defer></script><script src="polyfills-es2015.f332a089ad1600448873.js" type="module"></script><script src="main-es2015.15fcc223ef234831b503.js" type="module"></script><script src="main-es5.15fcc223ef234831b503.js" nomodule defer></script></body>
 </html>
