--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="styles.c444c863b162968fa6c4.css"></head>
+<link rel="stylesheet" href="styles.e2cb03829cd4766eb0dc.css"></head>
 <body>
   <app-root></app-root>
   <script src="https://sdks.shopifycdn.com/buy-button/1.0.0/buybutton.js"></script>
-<script src="runtime-es2015.0dae8cbc97194c7caed4.js" type="module"></script><script src="runtime-es5.0dae8cbc97194c7caed4.js" nomodule defer></script><script src="polyfills-es5.2237b5d0d7a85091411d.js" nomodule defer></script><script src="polyfills-es2015.f332a089ad1600448873.js" type="module"></script><script src="main-es2015.c069e05b9651f2379ed5.js" type="module"></script><script src="main-es5.c069e05b9651f2379ed5.js" nomodule defer></script></body>
+  <script>
+    const appHeight = () => {
+      const doc = document.documentElement
+      doc.style.setProperty('--app-height', `${window.innerHeight}px`)
+    }
+    window.addEventListener('resize', appHeight)
+    appHeight()
+  </script>
+<script src="runtime-es2015.0dae8cbc97194c7caed4.js" type="module"></script><script src="runtime-es5.0dae8cbc97194c7caed4.js" nomodule defer></script><script src="polyfills-es5.2237b5d0d7a85091411d.js" nomodule defer></script><script src="polyfills-es2015.f332a089ad1600448873.js" type="module"></script><script src="main-es2015.6a6a970b804a6ef4fbb3.js" type="module"></script><script src="main-es5.6a6a970b804a6ef4fbb3.js" nomodule defer></script></body>
 </html>
