--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>RealityShop</title>
+  <title>DREW PHILLIPS</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="styles.83fb5354c3a169bbe31e.css"></head>
+<link rel="stylesheet" href="styles.8c1c78f9c3b465bcd2ef.css"></head>
 <body>
   <app-root></app-root>
   <script src="https://sdks.shopifycdn.com/buy-button/1.0.0/buybutton.js"></script>
@@ -21,8 +21,8 @@
       const doc = document.documentElement
       doc.style.setProperty('--app-height', `${window.innerHeight}px`)
     }
-    window.addEventListener('resize', appHeight)
-    appHeight()
+    window.addEventListener('resize', appHeight);
+    appHeight();
   </script>
-<script src="runtime-es2015.0dae8cbc97194c7caed4.js" type="module"></script><script src="runtime-es5.0dae8cbc97194c7caed4.js" nomodule defer></script><script src="polyfills-es5.2237b5d0d7a85091411d.js" nomodule defer></script><script src="polyfills-es2015.f332a089ad1600448873.js" type="module"></script><script src="main-es2015.2ae6e1d38094f52e67a4.js" type="module"></script><script src="main-es5.2ae6e1d38094f52e67a4.js" nomodule defer></script></body>
+<script src="runtime-es2015.0dae8cbc97194c7caed4.js" type="module"></script><script src="runtime-es5.0dae8cbc97194c7caed4.js" nomodule defer></script><script src="polyfills-es5.2237b5d0d7a85091411d.js" nomodule defer></script><script src="polyfills-es2015.f332a089ad1600448873.js" type="module"></script><script src="main-es2015.faf790f3e44918f08d36.js" type="module"></script><script src="main-es5.faf790f3e44918f08d36.js" nomodule defer></script></body>
 </html>
