--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="title" content="Atacama">
-  <meta name="description" content="Atacama is an innovative and fast-growing manufacturer of plant-based and reusable plastic products based in the USA. The company has the capacity to design, formulate, manufacture and distribute environmentally friendly products.">
+  <meta name="description" content="Atacama is a developer of innovative bioplastic raw materials and a made in USA manufacturer of plant-based plastics and reusable plastic products. The company has the capacity to design, formulate, manufacture and distribute environmentally friendly, marine safe plastic products and is also active in the plant-based circular economy.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 
   <meta property="og:url" content="https://atacamausa.com/" />
   <meta property="og:title" content="Atacama" />
-  <meta property="og:description" content="Atacama is an innovative and fast-growing manufacturer of plant-based and reusable plastic products based in the USA. The company has the capacity to design, formulate, manufacture and distribute environmentally friendly products."/>
+  <meta property="og:description" content="Atacama is a developer of innovative bioplastic raw materials and a made in USA manufacturer of plant-based plastics and reusable plastic products. The company has the capacity to design, formulate, manufacture and distribute environmentally friendly, marine safe plastic products and is also active in the plant-based circular economy."/>
 
   <title>Atacama</title>
   <base href="/">
@@ -23,5 +23,5 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="runtime-es2015.0dae8cbc97194c7caed4.js" type="module"></script><script src="runtime-es5.0dae8cbc97194c7caed4.js" nomodule defer></script><script src="polyfills-es5.177e85a9724683782539.js" nomodule defer></script><script src="polyfills-es2015.f332a089ad1600448873.js" type="module"></script><script src="main-es2015.98925b357c670adcc25a.js" type="module"></script><script src="main-es5.98925b357c670adcc25a.js" nomodule defer></script></body>
+<script src="runtime-es2015.0dae8cbc97194c7caed4.js" type="module"></script><script src="runtime-es5.0dae8cbc97194c7caed4.js" nomodule defer></script><script src="polyfills-es5.177e85a9724683782539.js" nomodule defer></script><script src="polyfills-es2015.f332a089ad1600448873.js" type="module"></script><script src="main-es2015.1b867dc0eee61a26e035.js" type="module"></script><script src="main-es5.1b867dc0eee61a26e035.js" nomodule defer></script></body>
 </html>
