--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="title" content="Atacama">
+  <meta name="title" content="Atacama Manufacturing">
   <meta name="description" content="Atacama is a developer of innovative bioplastic raw materials and a made in USA manufacturer of plant-based plastics and reusable plastic products. The company has the capacity to design, formulate, manufacture and distribute environmentally friendly, marine safe plastic products and is also active in the plant-based circular economy.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 
   <meta property="og:url" content="https://atacamausa.com/" />
-  <meta property="og:title" content="Atacama" />
+  <meta property="og:title" content="Atacama Manufacturing" />
   <meta property="og:description" content="Atacama is a developer of innovative bioplastic raw materials and a made in USA manufacturer of plant-based plastics and reusable plastic products. The company has the capacity to design, formulate, manufacture and distribute environmentally friendly, marine safe plastic products and is also active in the plant-based circular economy."/>
 
-  <title>Atacama</title>
+  <title>Atacama Manufacturing</title>
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
